<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login_register"
            android:icon="@drawable/ic_profile"
            android:visible="false"
            android:title="@string/menu_login_register" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search_store"
            android:icon="@drawable/ic_location"
            android:title="@string/menu_search_store" />
        <item
            android:id="@+id/nav_search_product"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search_product" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_offer"
            android:title="@string/menu_promotions" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_email"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_glossary"
            android:icon="@drawable/ic_glossary"
            android:title="@string/menu_glossary" />
    </group>
</menu>