<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="10"
        android:title="@string/action_home"
        app:showAsAction="always" />

    <group
        android:id="@+id/group_type"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:checkable="false"
            android:enabled="false"
            android:title="@string/action_type_map" />
        <item
            android:id="@+id/action_normal"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/action_normal"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_satellite"
            android:orderInCategory="100"
            android:title="@string/action_satellite"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_terrain"
            android:orderInCategory="100"
            android:title="@string/action_terrain"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_hybrid"
            android:orderInCategory="100"
            android:title="@string/action_hybrid"
            app:showAsAction="never" />
    </group>
</menu>