<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainBackground">

    <EditText
        android:id="@+id/et_focus"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/white"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager_products"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:minHeight="120dp" />

            <RelativeLayout
                android:id="@+id/viewPagerIndicator"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/viewPagerCountDots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:orientation="horizontal" />

            </RelativeLayout>
        </LinearLayout>

        <com.muuyal.sika.customs.CustomTextView
            android:id="@+id/tv_empty_photos"
            style="@style/CustomTextView"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:text="@string/label_empty_photos"
            android:visibility="gone" />
    </RelativeLayout>

    <com.muuyal.sika.customs.CustomTextView
        android:id="@+id/tv_product_title"
        style="@style/CustomTextView"
        android:background="@color/colorPrimary"
        android:ellipsize="end"
        android:gravity="center"
        android:minHeight="?actionBarSize"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:textColor="@color/red"
        android:textSize="@dimen/text_big" />

    <com.muuyal.sika.customs.CustomTextView
        android:id="@+id/tv_product_descr"
        style="@style/CustomTextView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="0dp"
        android:textColor="@color/gray_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone">

                <com.muuyal.sika.customs.CustomButton
                    android:id="@+id/btn_uses"
                    style="@style/CustomButton.PrimaryColor"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/ic_help"
                    android:text="@string/label_uses" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.muuyal.sika.customs.CustomButton
                    android:id="@+id/btn_performance"
                    style="@style/CustomButton.PrimaryColor"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/ic_calc"
                    android:text="@string/label_performance"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <com.muuyal.sika.customs.CustomButton
            android:id="@+id/btn_nearest_store"
            style="@style/CustomButton.Red"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_location"
            android:text="@string/label_found_nearest_store"
            android:visibility="visible" />
    </LinearLayout>

    <com.muuyal.sika.customs.CustomTextView
        android:id="@+id/tv_related_products"
        style="@style/CustomTextView"
        android:layout_marginTop="20dp"
        android:background="@color/black_bar"
        android:gravity="center"
        android:minHeight="?actionBarSize"
        android:text="@string/label_related_products"
        android:textColor="@color/gray_bar"
        android:textSize="@dimen/text_big" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_related_products"
        style="@style/HorizontalRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary" />
</LinearLayout>