<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainBackground">

    <LinearLayout
        android:id="@+id/container_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.muuyal.sika.customs.CustomTextView
                android:id="@+id/tv_error_map"
                style="@style/CustomTextView"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/error_load_map"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/fl_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.muuyal.sika.customs.CustomTextView
                android:id="@+id/tv_empty_stores"
                style="@style/CustomTextView"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_empty_stores" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_nearby_stores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <com.muuyal.sika.customs.CustomButton
            android:layout_centerInParent="true"
            android:id="@+id/btn_see_near_stores"
            style="@style/CustomButton.PrimaryColor"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/label_nearest_store"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big"
            android:visibility="visible"
            />
    </RelativeLayout>

</RelativeLayout>